feat: CRAG retrieval + monitoring refactor + ddl-validate fix + test plan
- backend: add documents.chunks V3 migration, keep ddl-auto=validate; wire CRAG (RetrievalService, QueryReformulator, WebSearchService, CragConfig, TavilyConfig) into chat ask/ask-stream

- monitoring: prometheus v2.48 + grafana 10.2 with provisioning/alert-rules mounts and retention+lifecycle flags; reduce overlay to loki/promtail; drop old docker/prometheus config

- docs: add TEST_PLAN.md and scripts/e2e-curl-test.sh; gitignore test-upload PDFs

- cleanup: remove stray backend/src/main/java/com/s, drift_history/, app/metrics, ab_history